add %matplotlib inline

--- a/seiscope_opt_tb_wrapper/examples/rosenbrock.ipynb
+++ b/seiscope_opt_tb_wrapper/examples/rosenbrock.ipynb
@@ -25,6 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
@@ -4468,6 +4469,8 @@
     }
    ],
    "source": [
+    "#NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "# Define x, y\n",
     "x = np.linspace(-2, 2, 250)\n",
     "y = np.linspace(-1.5, 3, 250)\n",
@@ -4863,6 +4866,8 @@
     }
    ],
    "source": [
+    "#NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "# Define x, y\n",
     "x = np.linspace(-2, 2, 250)\n",
     "y = np.linspace(-1.5, 3, 250)\n",
@@ -6164,6 +6169,8 @@
     }
    ],
    "source": [
+    "#NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "# Define x, y\n",
     "x = np.linspace(-2, 2, 250)\n",
     "y = np.linspace(-1.5, 3, 250)\n",
