add small note about C datatypes

--- a/seiscope_opt_tb_wrapper/examples/rosenbrock.ipynb
+++ b/seiscope_opt_tb_wrapper/examples/rosenbrock.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "then, we set the dimension `n` of the minimization problem and the `flag` variable -  responsible for the communication with the minimization routine. This last variable has to be set to `0` in order to perform the necessary initializations in Fortran land, specifically, an initialization routine inherent to each algorithm is called in the first call of the algorithm routine within the optimization loop. On the other hand, it is necessary to set some fields in the data structure `udf` of the `sotb` object. "
+    "then, we set the dimension `n` of the minimization problem and the `flag` variable -  responsible for the communication with the minimization routine. This last variable has to be set to `0` in order to perform the necessary initializations in Fortran land, specifically, an initialization routine inherent to each algorithm is called in the first call of the algorithm routine within the optimization loop. On the other hand, it is necessary to set some fields in the data structure `udf` of the `sotb` object. Note the use of C datatypes like `c_int`, `c_float`, etc."
    ]
   },
   {
