renamed the module from sotb_wrapper to sotb.wrapper

--- a/sotb/wrapper/examples/rosenbrock.ipynb
+++ b/sotb/wrapper/examples/rosenbrock.ipynb
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Create an instance of the SEISCOPE optimization toolbox wrapper (sotb_wrapper) Class. \n",
-    "from sotb_wrapper import interface\n",
+    "from sotb.wrapper import interface\n",
     "sotb = interface.sotb_wrapper()"
    ]
   },
